	PR c++/56901 	* semantics.c (lambda_capture_field_type, lambda_proxy_type): 	Strip references before checking WILDCARD_TYPE_P.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@197819 138bc75d-0d04-0410-961f-82ee72b054a4